--- a/_posts/2014-09-21-services-1.markdown
+++ b/_posts/2014-09-21-services-1.markdown
@@ -1,6 +1,6 @@
 ---
 layout: default
-img: iwebdev.jpg
+img: webdev.jpg
 category: Services
 title: Death to the Stock Photo:<br>Special Thanks
 description: |
